# audio-tools

./: README.md
android/: .gitignore
android/jni/libaudio_tools/: Android.mk  audio_tools.c  queue.c  resample.c
android/jni/libaudio_tools/include/: audio_tools.h  queue.h  resample.h
android/jni/libsamplerate/: Android.mk  README.md  libsamplerate.mk
android/jni/libsamplerate/android/jni/: libsamplerate.mk
android/jni/test_bin/: Android.mk  main.cpp
mac/: .gitignore  CMakeLists.txt  main.c
